--- a/OC/DA_Python_V2/P2.md
+++ b/OC/DA_Python_V2/P2.md
@@ -1,5 +1,8 @@
 # Projet 2
 
+## Obligations
+Compte tenu du parcours dans son ensemble, j'impose systématiquement à tous mes étudiants la réalisation du P2 en POO (Programmation Orientée Objet). Vous trouverez tout ce dont vous aurez besoin sur ce cours : https://openclassrooms.com/fr/courses/235344-apprenez-a-programmer-en-python
+
 ## Astuces
 - Il vous est demandé de livre plusieurs scripts, un par étape du projet. Je vous propose ici 2 solutions :
 	- Créer 1 fichier par étape. A chaque fois que vous passez à l'étape suivante, dupliquez le code de l'étape précédente.
